--- a/lab3_code/main.ipynb
+++ b/lab3_code/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -122723,6 +122723,127 @@
     "                        title=\"Общий дашборд для анализа данных\", hover_data=df.columns)\n",
     "fig.update_layout(width=800, height=700)\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Бренд  Модель   Год  Объём двигателя Тип топлива     Трансмиссия  \\\n",
+      "0         Kia     Rio  2020              4.2      Diesel          Manual   \n",
+      "1   Chevrolet  Malibu  2012              2.0      Hybrid       Automatic   \n",
+      "2    Mercedes     GLA  2020              4.2      Diesel       Automatic   \n",
+      "3        Audi      Q5  2023              2.0    Electric          Manual   \n",
+      "4  Volkswagen    Golf  2003              2.6      Hybrid  Semi-Automatic   \n",
+      "\n",
+      "   Пробег  Количество дверей  Количество владельцев  Стоимость  \n",
+      "0  289944                  3                      5       8501  \n",
+      "1    5356                  2                      3      12092  \n",
+      "2  231440                  4                      2      11171  \n",
+      "3  160971                  2                      1      11780  \n",
+      "4  286618                  3                      3       2867  \n",
+      "labelencoder\n",
+      "0          Rio\n",
+      "1       Malibu\n",
+      "2          GLA\n",
+      "3           Q5\n",
+      "4         Golf\n",
+      "        ...   \n",
+      "95          Q5\n",
+      "96    3 Series\n",
+      "97      Passat\n",
+      "98    5 Series\n",
+      "99          A3\n",
+      "Name: Модель, Length: 100, dtype: object\n",
+      "[24 19 16 22 17  7  8 26 26 23  1 17  6 11 17 17 11 27 24 16 12 23 23 13\n",
+      " 16 26  2  0  0 12 28 21 18 16  9 20 22 26 14  3 15  1  8  8 23 22 22 15\n",
+      "  3 11  2 16 10 16 15  8 20  0 18 21 25  8  7 14 15  5 16 21 17 14 20 28\n",
+      " 11  0  7 26 25  6 16 29 25 17 14 27  3  8 28  5 21 15 26  9 20 29 10 22\n",
+      "  0 21  1  2]\n",
+      "one_hot_encoded\n",
+      "  3 Series 5 Series   A3   A4 Accord C-Class CR-V Camry Civic Corolla  ...  \\\n",
+      "0      0.0      0.0  0.0  0.0    0.0     0.0  0.0   0.0   0.0     0.0  ...   \n",
+      "1      0.0      0.0  0.0  0.0    0.0     0.0  0.0   0.0   0.0     0.0  ...   \n",
+      "2      0.0      0.0  0.0  0.0    0.0     0.0  0.0   0.0   0.0     0.0  ...   \n",
+      "3      0.0      0.0  0.0  0.0    0.0     0.0  0.0   0.0   0.0     0.0  ...   \n",
+      "4      0.0      0.0  0.0  0.0    0.0     0.0  0.0   0.0   0.0     0.0  ...   \n",
+      "5      0.0      0.0  0.0  0.0    0.0     0.0  0.0   1.0   0.0     0.0  ...   \n",
+      "6      0.0      0.0  0.0  0.0    0.0     0.0  0.0   0.0   1.0     0.0  ...   \n",
+      "7      0.0      0.0  0.0  0.0    0.0     0.0  0.0   0.0   0.0     0.0  ...   \n",
+      "8      0.0      0.0  0.0  0.0    0.0     0.0  0.0   0.0   0.0     0.0  ...   \n",
+      "9      0.0      0.0  0.0  0.0    0.0     0.0  0.0   0.0   0.0     0.0  ...   \n",
+      "\n",
+      "  Optima Passat   Q5 RAV4  Rio Sonata Sportage Tiguan Tucson   X5  \n",
+      "0    0.0    0.0  0.0  0.0  1.0    0.0      0.0    0.0    0.0  0.0  \n",
+      "1    0.0    0.0  0.0  0.0  0.0    0.0      0.0    0.0    0.0  0.0  \n",
+      "2    0.0    0.0  0.0  0.0  0.0    0.0      0.0    0.0    0.0  0.0  \n",
+      "3    0.0    0.0  1.0  0.0  0.0    0.0      0.0    0.0    0.0  0.0  \n",
+      "4    0.0    0.0  0.0  0.0  0.0    0.0      0.0    0.0    0.0  0.0  \n",
+      "5    0.0    0.0  0.0  0.0  0.0    0.0      0.0    0.0    0.0  0.0  \n",
+      "6    0.0    0.0  0.0  0.0  0.0    0.0      0.0    0.0    0.0  0.0  \n",
+      "7    0.0    0.0  0.0  0.0  0.0    0.0      1.0    0.0    0.0  0.0  \n",
+      "8    0.0    0.0  0.0  0.0  0.0    0.0      1.0    0.0    0.0  0.0  \n",
+      "9    0.0    0.0  0.0  1.0  0.0    0.0      0.0    0.0    0.0  0.0  \n",
+      "\n",
+      "[10 rows x 30 columns]\n",
+      "BinaryEncoder\n",
+      "   0_0  0_1  0_2  0_3  1_0  1_1  1_2  1_3  1_4  2_0  ...  9_3  9_4  9_5  9_6  \\\n",
+      "0    0    0    0    1    0    0    0    0    1    0  ...    0    0    0    0   \n",
+      "1    0    0    1    0    0    0    0    1    0    0  ...    0    0    0    0   \n",
+      "2    0    0    1    1    0    0    0    1    1    0  ...    0    0    0    0   \n",
+      "3    0    1    0    0    0    0    1    0    0    0  ...    0    0    0    0   \n",
+      "4    0    1    0    1    0    0    1    0    1    0  ...    0    0    0    0   \n",
+      "5    0    1    1    0    0    0    1    1    0    0  ...    0    0    0    0   \n",
+      "6    0    1    1    1    0    0    1    1    1    0  ...    0    0    0    0   \n",
+      "7    0    0    0    1    0    1    0    0    0    0  ...    0    0    0    0   \n",
+      "8    0    0    0    1    0    1    0    0    0    0  ...    0    0    0    0   \n",
+      "9    0    1    1    0    0    1    0    0    1    0  ...    0    0    0    0   \n",
+      "\n",
+      "   9_7  9_8  9_9  9_10  9_11  9_12  \n",
+      "0    0    0    0     0     0     1  \n",
+      "1    0    0    0     0     1     0  \n",
+      "2    0    0    0     0     1     1  \n",
+      "3    0    0    0     1     0     0  \n",
+      "4    0    0    0     1     0     1  \n",
+      "5    0    0    0     1     1     0  \n",
+      "6    0    0    0     1     1     1  \n",
+      "7    0    0    1     0     0     0  \n",
+      "8    0    0    1     0     0     1  \n",
+      "9    0    0    1     0     1     0  \n",
+      "\n",
+      "[10 rows x 58 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+    "from category_encoders.binary import BinaryEncoder\n",
+    "print(df.head(5))\n",
+    "\n",
+    "print(\"labelencoder\")\n",
+    "labelencoder = LabelEncoder()\n",
+    "df1 = df[\"Модель\"]\n",
+    "df1_new = labelencoder.fit_transform(df1.values)\n",
+    "print(df1[:100])\n",
+    "print(df1_new[:100])\n",
+    "\n",
+    "print(\"one_hot_encoded\")\n",
+    "df2 = df[[\"Модель\"]]\n",
+    "onh = OneHotEncoder()\n",
+    "transform = onh.fit_transform(df2.values)\n",
+    "print(pd.DataFrame(transform.toarray(), columns=onh.categories_).head(10))\n",
+    "\n",
+    "print(\"BinaryEncoder\")\n",
+    "bn = BinaryEncoder()\n",
+    "print(bn.fit_transform(df.values)[:10])\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
